--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,64 @@
             android:layout_height="wrap_content"
             android:text="사용자가 눌렀다고 인식 가능한 버튼" />
 
+        <EditText
+            android:id="@+id/edit_toast_msg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="토스트로 출력할 내용 적기"
+            android:inputType="text" />
+
+        <Button
+            android:id="@+id/btn_text_toast"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="입력한 문구 토스트롤 띄우기" />
+
+        <EditText
+            android:id="@+id/edit_text_change"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="text view syntax"
+            android:inputType="text" />
+
+        <Button
+            android:id="@+id/btn_change_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="텍스트 변경하기" />
+
+
+        <TextView
+            android:id="@+id/text_text_chage"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="변경될 텍스트 뷰"
+            android:textSize="18sp" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/edit_greeting"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:hint="이름 입력"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btn_greeting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="인사문구 출력"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
 
     </LinearLayout>
